// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a current event correctly 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    Name
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <EntityInfoBar
      entity={
        FullEvent {
          "eventSeries": null,
          "images": Array [],
          "isExpiredOn": [MockFunction] {
            "calls": Array [
              Array [
                "2018/01/01",
              ],
            ],
          },
          "name": "Name",
          "tags": Array [],
          "talents": Array [],
          "venue": SummaryVenue {
            "latitude": 1,
            "longitude": 2,
          },
        }
      }
    />
    <EntityColumnLayout>
      <EntityColumn>
        <EventMainDetails
          dateStr="2018/01/01"
          event={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityDescription
          entity={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityWeSay
          entity={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityExternalLinks
          entity={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <TagCollection
          tags={Array []}
        />
        <EventTalentCarousel
          onTalentSelected={[Function]}
          selectedTalentId={null}
          talents={Array []}
        />
      </EntityColumn>
      <EntityColumn>
        <OpeningTimes
          dateStr="2018/01/01"
          entity={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <Divider
          type="basic"
        />
      </EntityColumn>
    </EntityColumnLayout>
  </EntityDetailsContainer>
  <BasicSection>
    <EntityMap
      pin={
        Object {
          "lat": 1,
          "lng": 2,
        }
      }
      zoom={14}
    />
  </BasicSection>
</React.Fragment>
`;

exports[`should render a current event correctly that has full details 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    Name
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <EntityInfoBar
      entity={
        FullEvent {
          "eventSeries": SummaryEventSeries {},
          "images": Array [],
          "isExpiredOn": [MockFunction] {
            "calls": Array [
              Array [
                "2018/01/01",
              ],
            ],
          },
          "name": "Name",
          "tags": Array [],
          "talents": Array [
            EventSummaryTalent {
              "lastName": "Last",
            },
          ],
          "venue": SummaryVenue {
            "latitude": 1,
            "longitude": 2,
          },
        }
      }
    />
    <EntityColumnLayout>
      <EntityColumn>
        <EventMainDetails
          dateStr="2018/01/01"
          event={
            FullEvent {
              "eventSeries": SummaryEventSeries {},
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityDescription
          entity={
            FullEvent {
              "eventSeries": SummaryEventSeries {},
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityWeSay
          entity={
            FullEvent {
              "eventSeries": SummaryEventSeries {},
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EventSeriesLink
          eventSeries={SummaryEventSeries {}}
        />
        <EntityExternalLinks
          entity={
            FullEvent {
              "eventSeries": SummaryEventSeries {},
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <TagCollection
          tags={Array []}
        />
        <Divider
          type="basic"
        />
        <EventTalentCarousel
          onTalentSelected={[Function]}
          selectedTalentId={null}
          talents={
            Array [
              EventSummaryTalent {
                "lastName": "Last",
              },
            ]
          }
        />
      </EntityColumn>
      <EntityColumn>
        <OpeningTimes
          dateStr="2018/01/01"
          entity={
            FullEvent {
              "eventSeries": SummaryEventSeries {},
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [
                EventSummaryTalent {
                  "lastName": "Last",
                },
              ],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <Divider
          type="basic"
        />
      </EntityColumn>
    </EntityColumnLayout>
  </EntityDetailsContainer>
  <BasicSection>
    <EntityMap
      pin={
        Object {
          "lat": 1,
          "lng": 2,
        }
      }
      zoom={14}
    />
  </BasicSection>
</React.Fragment>
`;

exports[`should render an expired event correctly 1`] = `
<React.Fragment>
  <Image
    entityType="event"
    images={Array []}
    showCarousel={false}
  />
  <EntityHeading>
    Name
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <EntityInfoBar
      entity={
        FullEvent {
          "eventSeries": null,
          "images": Array [],
          "isExpiredOn": [MockFunction] {
            "calls": Array [
              Array [
                "2018/01/01",
              ],
            ],
          },
          "name": "Name",
          "tags": Array [],
          "talents": Array [],
          "venue": SummaryVenue {
            "latitude": 1,
            "longitude": 2,
          },
        }
      }
    />
    <EntityColumnLayout>
      <EntityColumn>
        <EventMainDetails
          dateStr="2018/01/01"
          event={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityDescription
          entity={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityWeSay
          entity={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <EntityExternalLinks
          entity={
            FullEvent {
              "eventSeries": null,
              "images": Array [],
              "isExpiredOn": [MockFunction] {
                "calls": Array [
                  Array [
                    "2018/01/01",
                  ],
                ],
              },
              "name": "Name",
              "tags": Array [],
              "talents": Array [],
              "venue": SummaryVenue {
                "latitude": 1,
                "longitude": 2,
              },
            }
          }
        />
        <TagCollection
          tags={Array []}
        />
        <EventTalentCarousel
          onTalentSelected={[Function]}
          selectedTalentId={null}
          talents={Array []}
        />
      </EntityColumn>
      <EntityColumn>
        <Message
          showIcon={true}
          type="error"
        >
          This event has expired.
        </Message>
      </EntityColumn>
    </EntityColumnLayout>
  </EntityDetailsContainer>
  <BasicSection>
    <EntityMap
      pin={
        Object {
          "lat": 1,
          "lng": 2,
        }
      }
      zoom={14}
    />
  </BasicSection>
</React.Fragment>
`;
